# torus-plasma

./: README.md  baranov-fp_2D.ipynb  lesson10.ipynb  lesson11.ipynb  lesson5.ipynb  lesson6.ipynb  lesson7.ipynb  lesson8.ipynb  lesson9.ipynb  pyproject.toml  sympy_test.ipynb  taylor.ipynb  traject_multi_solve_ivp.ipynb
