[tool.poetry]
name = "torus-plasma"
version = "0.1.0"
description = ""
authors = ["Alex <temper8@gmail.com>"]
readme = "README.md"
packages = [{include = "torus_plasma"}]

[tool.poetry.dependencies]
python = "3.11.2"
plotly = "^5.14.1"
numpy = "^1.24.3"
ipykernel = "^6.23.1"
jupyterlab = "^4.0.0"
pandas = "^2.0.1"
ipympl = "^0.9.3"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
